--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: CS371p Fall 2016: Brian Cui
+name: "CS371p Fall 2016: Brian Cui"
 
 # Short bio or description (displayed in the header)
 description: something here
