--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: "CS371p Fall 2016: Brian Cui"
 description: "A weekly blog about OOP."
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/theBrianCui/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/theBrianCui/CS371p_blog/gh-pages/images/profile.jpg
 
 #
 # Flags below are optional
